--- a/oxygine/SDL/android/extension/build.gradle
+++ b/oxygine/SDL/android/extension/build.gradle
@@ -12,9 +12,9 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-        compileSdkVersion rootProject.android.compileSdkVersion
-        buildToolsVersion rootProject.android.buildToolsVersion
-        
+        compileSdkVersion rootProject.ext.compileSdkVersion
+        buildToolsVersion rootProject.ext.buildToolsVersion
+
         sourceSets {
             main {
                 manifest.srcFile 'AndroidManifest.xml'
