--- a/oxygine/SDL/android/lib/build.gradle
+++ b/oxygine/SDL/android/lib/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         google()
         mavenLocal()
         mavenCentral()
-        jcenter()        
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
@@ -22,6 +22,10 @@ apply plugin: 'com.android.library'
 
 dependencies {
         implementation project(':oxygine-extension')
+        api project(':SDL') {
+          ext.BUILD_AS_LIBRARY = true
+          ext.EXCLUDE_NATIVE_LIBS = true
+        }
 }
 
 android {
@@ -29,8 +33,8 @@ android {
             abortOnError false
         }
 
-        compileSdkVersion rootProject.android.compileSdkVersion
-        buildToolsVersion rootProject.android.buildToolsVersion
+        compileSdkVersion rootProject.ext.compileSdkVersion
+        buildToolsVersion rootProject.ext.buildToolsVersion
 
         sourceSets {
             main {
